# omgups23

./: CMakeLists.txt  Lab3_Основы docker.docx  README.md  Yakovlev_Nikolai_it_lab1.docx  Yakovlev_Nikolai_it_lab2.docx  Yakovlev_Nikolai_it_lab3.docx  Yakovlev_Nikolai_it_lab4.docx  Yakovlev_Nikolai_it_lab5.docx  Yakovlev_Nikolai_it_lab6.docx  Yakovlev_Nikolai_it_lab7.docx  Yakovlev_Nikolai_it_lab8.docx  client.h  docker-compose.yml  globals.c  globals.h  index.html  lab1.c  lab1.h  lab2.c  lab2.h  lab3.c  lab3.h  main.c  main.h  repo.7z  server.h  ~$kovlev_Nikolai_it_lab2.docx
auth/: auth.c  auth.h
binary/: binary.c  binary.h
color/: color.h
connection/: connection.c  connection.h
cursor/: cursor.h
game-server/: game-server.c  game-server.h
map/: map.c  map.h
packets/: packets.c  packets.h
public/: main.c
rpc-commands/: handle-connect-to-server.rpc-command.c  handle-connect-to-server.rpc-command.h  handle-create-game-server.rpc-command.c  handle-create-game-server.rpc-command.h  handle-get-game-servers.rpc-command.c  handle-get-game-servers.rpc-command.h  rpc-commands.h
socket/: socket.c  socket.h
team/: team.c  team.h
unit/: unit.c  unit.h
user/: user.c  user.h
utils/: utils.c  utils.h
vec/: vec.h
